load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
package(default_visibility = ["//visibility:public"])

exports_files(["obazl.opamrc"])

bzl_library(
    name = "stardoc",
    srcs = glob(["*.bzl"]),
    deps = [
        "//extensions/dbg:stardoc",
        "//extensions/ocaml:stardoc",
        "//extensions/opam:stardoc",
        "//extensions/utop:stardoc",
        "@bazel_skylib//lib:collections",
        # "//build/_actions:stardoc",
        # "//build/_lib:stardoc",
        # "//build/_providers:stardoc",
        # "//build/_rules:stardoc",
        # "//build/_rules/ocaml_binary:stardoc",
        # "//build/_rules/ocaml_library:stardoc",
        # "//build/_rules/ocaml_module:stardoc",
        # "//build/_rules/ocaml_ns:stardoc",
        # "//build/_transitions:stardoc",
        # "//lib:stardoc"
    ],
    visibility = ["//visibility:public"],
)
