load("//bootstrap:BUILD.bzl", "CMD_FLAGS", "BOOTSTRAP_INCLUDES")

cc_binary(
    name  = "here",
    srcs  = ["here.c"],
    defines = select({
        "//bzl/host:debug": [], # "DEBUG_TRACE"],
        "//conditions:default":   []
    }),
    copts = CMD_FLAGS + BOOTSTRAP_INCLUDES,
    deps = ["//bootstrap"],
)
